Added README and updated personal info

--- a/index.html
+++ b/index.html
@@ -40,6 +40,24 @@
         <div class="timeline-item">
           <div class="timeline-org">
             <div class="timeline-logo">
+              <img src="assets\images\logos\adp-logo.png" alt="ADP">
+            </div>
+            <p class="org-name">ADP <br><span class="timeline-date">May. 2025 – Jul. 2025</span></p>
+          </div>
+          <div class="timeline-org-card">
+            <h3>Data Developer Jr.</h3>
+            <ul>
+              <li>Designed and deployed ETL pipelines using Databricks and PySpark for scheduled data streams, implementing Unity Catalog for robust data governance and lineage tracking.</li>
+              <li>Leveraged AWS services like S3, Redshift, Lambda, and Glue for data storage, warehousing, automation, and refresh workflows.</li>
+              <li>Reported valuable insights through Python & SQL reports, and developed Power BI dashboard using DAX, for higher-ups. </li>
+              <li>Documented and contributed to internal knowledge sharing through Docker, BitBucket, Git, Jira, and Confluence. </li>
+            </ul>
+          </div>
+        </div>
+        <!-- Timeline Item 2 -->
+        <div class="timeline-item">
+          <div class="timeline-org">
+            <div class="timeline-logo">
               <img src="assets\images\logos\stevens-logo.png" alt="Stevens Institute of Technology">
             </div>
             <p class="org-name">Stevens Institute of Technology <br><span class="timeline-date">Jul. 2024 – Present</span></p>
@@ -54,7 +72,7 @@
             </ul>
           </div>
         </div>
-        <!-- Timeline Item 2 -->
+        <!-- Timeline Item 3 -->
         <div class="timeline-item">
           <div class="timeline-org">
             <div class="timeline-logo">
@@ -72,7 +90,7 @@
             </ul>
           </div>
         </div>
-        <!-- Timeline Item 3 -->
+        <!-- Timeline Item 4 -->
         <div class="timeline-item">
           <div class="timeline-org">
             <div class="timeline-logo">
@@ -141,16 +159,16 @@
       <h2 class="about-me-title">About Me</h2>
       <div class="about-me-content">
         <p>
-          Hi, I'm Nihar Patel, a passionate Machine Learning Engineer with a strong background in data science, software development, and research. I specialize in building intelligent systems to solve real-world problems using cutting-edge technologies like Python, TensorFlow, PyTorch, C#, and Unity.
+          Hi, I'm Nihar Patel, a passionate Data Scientist with a strong background in  Machine Learning, Data Engineering, Software Development, and Research. I specialize in building intelligent systems to solve real-world problems using cutting-edge technologies like Python, TensorFlow, PyTorch, C#, and Unity.
           <br>
           <br>
           I hold a Master's degree in Data Science from Stevens Institute of Technology and a Bachelor's degree in Computer Science from Ahmedabad University along with a minor in Business analytics. My work experience includes roles as a Data Science Teaching Assistant, Software Developer Intern, and Undergraduate Research Intern.
           <br>
           <br>
-          In my free time, I enjoy contributing to open-source projects, writing technical blogs, and exploring new advancements in AI and machine learning.
+          In my free time, I enjoy contributing to open-source projects, writing technical blogs, and exploring and learning about new advancements in AI and machine learning.
           <br>
           <br>
-          Appart from that, I'm a big fan of THISSS!!!
+          Appart from that, I'm a big fan of THISSS!!! 👇
         </p>
       </div>
       <!-- <img src="assets\images\icons\car-icon.png" style="width: 100%; margin: 0px; padding: 0px;"></img> -->
