--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
   <meta property="og:title" content="Nihar Patel" />
   <meta property="og:description" content="Hi I am Nihar Patel, a MS Data Science student at Stevens." />
   <meta property="og:image" content="https://nihar-patel-371.github.io/portfolio/assets/images/profile/website-preview-thumbnail.png" />
-  <meta property="og:url" content="https://nihar-patel-371.github.io/portfolio/" />
+  <meta property="og:url" content="https://nihar371.github.io/" />
 
   <title>Nihar Patel 📄</title>
   <link rel="icon" type="image/np-icon" href="assets\images\favicon\favicon-32x32.png">
