Initital push, for converting portfolio to SPA

--- a/blogs/Web Scraping - Selenium/web scraping with selenium.html
+++ b/blogs/Web Scraping - Selenium/web scraping with selenium.html
@@ -2,8 +2,9 @@
 
 <html lang="en">
 <head><meta charset="utf-8"/>
-<link rel="stylesheet" href="../../blog_loader_styles.css">
-<script src="../../blog_loader_scripts.js"></script>
+<link rel="stylesheet" href="/basic_page_styles.css">
+<link rel="stylesheet" href="/blog_template_styles.css">
+<script src="/basic_page_scripts.js"></script>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>web scraping with selenium</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <style type="text/css">
