Fixed the progress bar, for the blogs

--- a/blog.html
+++ b/blog.html
@@ -16,13 +16,10 @@
   <meta property="og:url" content="https://nihar371.github.io/" />
 
   <title>Nihar Patel 📄</title>
-  <link rel="icon" type="image/np-icon" href="assets\images\favicon\favicon-32x32.png">
+  <link rel="icon" type="image/np-icon" href="\assets\images\favicon\favicon-32x32.png">
 </head>
 
 <body>
-  <!-- Scroll bar -->
-  <div id="bar"></div>
-
   <main>
     <!-- Blog Section -->
     <div class="blog-section" id="blogSection">
