--- a/blogs/Web Scraping - Selenium/web scraping with selenium.html
+++ b/blogs/Web Scraping - Selenium/web scraping with selenium.html
@@ -5,6 +5,8 @@
 <link rel="stylesheet" href="/basic_page_styles.css">
 <link rel="stylesheet" href="/blog_template_styles.css">
 <script src="/basic_page_scripts.js"></script>
+<link rel="icon" type="image/np-icon" href="\assets\images\favicon\favicon-32x32.png">
+
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>web scraping with selenium</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <style type="text/css">
