--- a/index.html
+++ b/index.html
@@ -16,13 +16,10 @@
   <meta property="og:url" content="https://nihar-patel-371.github.io/portfolio/" />
 
   <title>Nihar Patel 🤖</title>
-  <link rel="icon" type="image/np-icon" href="assets\images\favicon\favicon-32x32.png">
+  <link rel="icon" type="image/np-icon" href="\assets\images\favicon\favicon-32x32.png">
 </head>
 
 <body>
-  <!-- Scroll bar -->
-  <div id="bar"></div>
-
   <main>
 
     <!-- Timeline Container -->
