Replaced older f-1 image, with a new one

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     </div>
 
     <div class="formula1">
-      <img src="assets\images\icons\nANIIng.jpeg" alt="formula 1 image">
+      <img src="assets\images\icons\formula1_wallpaper.jpg" alt="formula 1 image">
     </div>
     
   </main>
