Almost forgot to change the meta-data

--- a/project.html
+++ b/project.html
@@ -7,13 +7,13 @@
   <link rel="stylesheet" href="project_page_styles.css">
 
   <meta name="view-transition" content="same-origin" />
-  <meta name="description" content="Portfolio">
+  <meta name="description" content="Personal Website">
   <meta name="keywords" content="Nihar Patel,Data Scientist,ML,AI">
   <meta name="author" content="Nihar Patel">
   <meta property="og:title" content="Nihar Patel" />
-  <meta property="og:description" content="Hi I am Nihar Patel, a MS Data Science student at Stevens." />
-  <meta property="og:image" content="https://nihar-patel-371.github.io/portfolio/assets/images/profile/website-preview-thumbnail.png" />
-  <meta property="og:url" content="https://nihar-patel-371.github.io/portfolio/" />
+  <meta property="og:description" content="Hi I am Nihar Patel, a Data Science professional, with a MS in Data Science from Stevens." />
+  <meta property="og:image" content="https://nihar371.github.io/assets/images/profile/website-preview-thumbnail.png" />
+  <meta property="og:url" content="https://nihar371.github.io/" />
 
   <title>Nihar Patel 🤖</title>
   <link rel="icon" type="image/np-icon" href="\assets\images\favicon\favicon-32x32.png">
