Missed a small change in the index file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="basic_page_styles.css">
 
   <meta name="view-transition" content="same-origin" />
-  <meta name="description" content="Portfolio">
+  <meta name="description" content="Personal Website">
   <meta name="keywords" content="Nihar Patel,Data Scientist,ML,AI">
   <meta name="author" content="Nihar Patel">
   <meta property="og:title" content="Nihar Patel" />
