Structure changed to / format

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="about_page_styles.css">
-  <link rel="stylesheet" href="basic_page_styles.css">
+  
+  <link rel="stylesheet" href="/styles/about_page_styles.css">
+  <link rel="stylesheet" href="/styles/basic_page_styles.css">
+  <script src="/scripts/basic_page_scripts.js" defer></script>
+  <script src="/scripts/about_page_scripts.js" defer></script>
 
   <meta name="view-transition" content="same-origin" />
   <meta name="description" content="Personal Website">
@@ -16,7 +19,7 @@
   <meta property="og:url" content="https://nihar371.github.io/" />
 
   <title>Nihar Patel 🤖</title>
-  <link rel="icon" type="image/np-icon" href="\assets\images\favicon\favicon-32x32.png">
+  <link rel="icon" type="image/np-icon" href="/assets/images/favicon/favicon-32x32.png">
 </head>
 
 <body>
@@ -31,7 +34,7 @@
         <div class="timeline-item">
           <div class="timeline-org">
             <div class="timeline-logo">
-              <img src="assets\images\logos\adp-logo.png" alt="ADP">
+              <img src="/assets/images/logos/adp-logo.png" alt="ADP">
             </div>
             <p class="org-name">ADP <br><span class="timeline-date">May. 2025 – Jul. 2025</span></p>
           </div>
@@ -49,7 +52,7 @@
         <div class="timeline-item">
           <div class="timeline-org">
             <div class="timeline-logo">
-              <img src="assets\images\logos\stevens-logo.png" alt="Stevens Institute of Technology">
+              <img src="/assets/images/logos/stevens-logo.png" alt="Stevens Institute of Technology">
             </div>
             <p class="org-name">Stevens Institute of Technology <br><span class="timeline-date">Jul. 2024 – Present</span></p>
           </div>
@@ -67,7 +70,7 @@
         <div class="timeline-item">
           <div class="timeline-org">
             <div class="timeline-logo">
-              <img src="assets\images\logos\effe-studio-logo.png" alt="EFFE Studio">
+              <img src="/assets/images/logos/effe-studio-logo.png" alt="EFFE Studio">
             </div>
             <p class="org-name">EFFE Studio Pvt. Ltd. <br><span class="timeline-date">Feb. 2023 – Jun. 2023</span></p>
           </div>
@@ -85,7 +88,7 @@
         <div class="timeline-item">
           <div class="timeline-org">
             <div class="timeline-logo">
-              <img src="assets\images\logos\micxn-lab-logo.png" alt="MICxN Laboratory">
+              <img src="/assets/images/logos/micxn-lab-logo.png" alt="MICxN Laboratory">
             </div>
             <p class="org-name">MICxN Laboratory <br><span class="timeline-date">May 2021 – Jul. 2021</span></p>
           </div>
@@ -112,7 +115,7 @@
         <div class="timeline-item">
           <div class="timeline-org">
             <div class="timeline-logo">
-              <img src="assets\images\logos\stevens-logo.png" alt="Stevens Institute of Technology">
+              <img src="/assets/images/logos/stevens-logo.png" alt="Stevens Institute of Technology">
             </div>
             <p class="org-name">Stevens Institute of Technology <br><span class="timeline-date">Sep. 2023 – Present</span></p>
           </div>
@@ -130,7 +133,7 @@
         <div class="timeline-item">
           <div class="timeline-org">
             <div class="timeline-logo">
-              <img src="assets\images\logos\ahmedabad-uni-logo.png" alt="Ahmedabad University">
+              <img src="/assets/images/logos/ahmedabad-uni-logo.png" alt="Ahmedabad University">
             </div>
             <p class="org-name">Ahmedabad University <br><span class="timeline-date">Aug. 2019 – May 2023</span></p>
           </div>
@@ -162,17 +165,12 @@
           Appart from that, I'm a big fan of THISSS!!! 👇
         </p>
       </div>
-      <!-- <img src="assets\images\icons\car-icon.png" style="width: 100%; margin: 0px; padding: 0px;"></img> -->
     </div>
 
     <div class="formula1">
-      <img src="assets\images\icons\formula1_wallpaper.jpg" alt="formula 1 image">
+      <img src="/assets/images/icons/formula1_wallpaper.jpg" alt="formula 1 image">
     </div>
     
   </main>
-  
-  <!-- JavaScript for Projects Section -->
-  <script src="basic_page_scripts.js"></script>
-  <script src="about_page_scripts.js"></script>
 </body>
 </html>
