Changed About me

--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+  <svg width="0" height="0" style="position:absolute">
+    <filter id="grainy">
+      <feTurbulence type="fractalNoise" baseFrequency="0.85" numOctaves="3" stitchTiles="stitch" />
+      <feColorMatrix type="saturate" values="0" />
+    </filter>
+  </svg>
+
   <link rel="stylesheet" href="/styles/about_page_styles.css">
   <link rel="stylesheet" href="/styles/basic_page_styles.css">
   <script src="/scripts/basic_page_scripts.js" defer></script>
@@ -14,7 +21,8 @@
   <meta name="keywords" content="Nihar Patel,Data Scientist,ML,AI">
   <meta name="author" content="Nihar Patel">
   <meta property="og:title" content="Nihar Patel" />
-  <meta property="og:description" content="Hi I am Nihar Patel, a Data Science professional, with a MS in Data Science from Stevens." />
+  <meta property="og:description"
+    content="Hi I am Nihar Patel, a Data Science professional, with a MS in Data Science from Stevens." />
   <meta property="og:image" content="https://nihar371.github.io/assets/images/profile/website-preview-thumbnail.png" />
   <meta property="og:url" content="https://nihar371.github.io/" />
 
@@ -41,10 +49,14 @@
           <div class="timeline-org-card">
             <h3>Data Developer Jr.</h3>
             <ul>
-              <li>Designed and deployed ETL pipelines using Databricks and PySpark for scheduled data streams, implementing Unity Catalog for robust data governance and lineage tracking.</li>
-              <li>Leveraged AWS services like S3, Redshift, Lambda, and Glue for data storage, warehousing, automation, and refresh workflows.</li>
-              <li>Reported valuable insights through Python & SQL reports, and developed Power BI dashboard using DAX, for higher-ups. </li>
-              <li>Documented and contributed to internal knowledge sharing through Docker, BitBucket, Git, Jira, and Confluence. </li>
+              <li>Designed and deployed ETL pipelines using Databricks and PySpark for scheduled data streams,
+                implementing Unity Catalog for robust data governance and lineage tracking.</li>
+              <li>Leveraged AWS services like S3, Redshift, Lambda, and Glue for data storage, warehousing, automation,
+                and refresh workflows.</li>
+              <li>Reported valuable insights through Python & SQL reports, and developed Power BI dashboard using DAX,
+                for higher-ups. </li>
+              <li>Documented and contributed to internal knowledge sharing through Docker, BitBucket, Git, Jira, and
+                Confluence. </li>
             </ul>
           </div>
         </div>
@@ -54,15 +66,21 @@
             <div class="timeline-logo">
               <img src="/assets/images/logos/stevens-logo.png" alt="Stevens Institute of Technology">
             </div>
-            <p class="org-name">Stevens Institute of Technology <br><span class="timeline-date">Jul. 2024 – Present</span></p>
+            <p class="org-name">Stevens Institute of Technology <br><span class="timeline-date">Jul. 2024 –
+                Present</span></p>
           </div>
           <div class="timeline-org-card">
             <h3>Data Science Teaching Assistant</h3>
             <ul>
-              <li>Assisted Prof. Pedro Vilanova-Guerra and Prof. Paul Schwartz in MA576: Optimization for Data Science, and MA540: Probability Theory respectively.</li>
-              <li>Assisted Prof. Tewodros Zewde in conducting the AI Workshop for the Summer Pre-College Program 2024.</li>
-              <li>Taught how to code in Python from scratch to building and training a Multi-Layer Perceptron, including working with ML libraries such as Numpy, Pandas, Matplotlib, and Scikit-Learn.</li>
-              <li>Covered and discussed advanced topics during the lectures, such as Responsible AI, Supervised and Unsupervised Learning, Neural Networks, CNNs, and Generative AI, to illustrate their relevance and applications in daily life.</li>
+              <li>Assisted Prof. Pedro Vilanova-Guerra and Prof. Paul Schwartz in MA576: Optimization for Data Science,
+                and MA540: Probability Theory respectively.</li>
+              <li>Assisted Prof. Tewodros Zewde in conducting the AI Workshop for the Summer Pre-College Program 2024.
+              </li>
+              <li>Taught how to code in Python from scratch to building and training a Multi-Layer Perceptron, including
+                working with ML libraries such as Numpy, Pandas, Matplotlib, and Scikit-Learn.</li>
+              <li>Covered and discussed advanced topics during the lectures, such as Responsible AI, Supervised and
+                Unsupervised Learning, Neural Networks, CNNs, and Generative AI, to illustrate their relevance and
+                applications in daily life.</li>
             </ul>
           </div>
         </div>
@@ -77,10 +95,16 @@
           <div class="timeline-org-card">
             <h3>Software Developer Intern</h3>
             <ul>
-              <li>Led a team of five, developers and 3D artists, major working areas include scripting game mechanics and animating eventsin Unity.</li>
-              <li>Integrated database and database-authentication systems, with the help of Google Cloud Auth 2.0 and Firebase, handling over 10,000 users, with a fully functional graphical user interface (GUI) in Unity, through Google console API calls.</li>
-              <li>Implemented sophisticated methods like Dynamic NavMesh Pathfinding, Machine Learning Agents, and Animation Rigging.</li>
-              <li>Used Universal Render Pipeline (URP) to double the graphic enhancement, achieved a performance boost of over 150% through Occlusion Culling in Unity, and created more than 30 assets and animated characters in Blender, and Mixamo.</li>
+              <li>Led a team of five, developers and 3D artists, major working areas include scripting game mechanics
+                and animating eventsin Unity.</li>
+              <li>Integrated database and database-authentication systems, with the help of Google Cloud Auth 2.0 and
+                Firebase, handling over 10,000 users, with a fully functional graphical user interface (GUI) in Unity,
+                through Google console API calls.</li>
+              <li>Implemented sophisticated methods like Dynamic NavMesh Pathfinding, Machine Learning Agents, and
+                Animation Rigging.</li>
+              <li>Used Universal Render Pipeline (URP) to double the graphic enhancement, achieved a performance boost
+                of over 150% through Occlusion Culling in Unity, and created more than 30 assets and animated characters
+                in Blender, and Mixamo.</li>
             </ul>
           </div>
         </div>
@@ -95,14 +119,22 @@
           <div class="timeline-org-card">
             <h3>Undergraduate Research Intern</h3>
             <ul>
-              <li>Addressed congestion control and pedestrian safety within Intelligent Transportation Systems (ITS).</li>
-              <li>Employed unsupervised clustering algorithms like K-means, K-nearest neighbors (KNN), and spatial clustering for segmentation, enabling customized approaches for distinct clusters.</li>
-              <li>Utilized Recurrent Neural Networks (RNN) and Long Short-Term Memory (LSTM) networks to tackle traffic congestion at intersections and crossroads.</li>
-              <li>Deployed advanced machine learning techniques, including Spatio-Temporal Graph Convolutional Networks (STGCNN), to mitigate traffic congestion leveraging 5G networks.</li>
-              <li>Studied and Analyzed the impacts on mobility due to the 5G network, under the sub-domain of Intelligent Transport System (ITS).</li>
-              <li>Simulation models were performed with the help of traffic simulators like SUMO, PTV-VISSIM, and networking tool NS-3.</li>
-              <li>Analyzed clustering algorithms on networking protocols such as AODV, OLSR, DSDV, and DSR, for the Freeway mobility model.</li>
-              <li>Advance Analysis of every node was performed and monitored via Flow-monitor and 5G-LENA dependency, in NS3, Ubuntu.</li>
+              <li>Addressed congestion control and pedestrian safety within Intelligent Transportation Systems (ITS).
+              </li>
+              <li>Employed unsupervised clustering algorithms like K-means, K-nearest neighbors (KNN), and spatial
+                clustering for segmentation, enabling customized approaches for distinct clusters.</li>
+              <li>Utilized Recurrent Neural Networks (RNN) and Long Short-Term Memory (LSTM) networks to tackle traffic
+                congestion at intersections and crossroads.</li>
+              <li>Deployed advanced machine learning techniques, including Spatio-Temporal Graph Convolutional Networks
+                (STGCNN), to mitigate traffic congestion leveraging 5G networks.</li>
+              <li>Studied and Analyzed the impacts on mobility due to the 5G network, under the sub-domain of
+                Intelligent Transport System (ITS).</li>
+              <li>Simulation models were performed with the help of traffic simulators like SUMO, PTV-VISSIM, and
+                networking tool NS-3.</li>
+              <li>Analyzed clustering algorithms on networking protocols such as AODV, OLSR, DSDV, and DSR, for the
+                Freeway mobility model.</li>
+              <li>Advance Analysis of every node was performed and monitored via Flow-monitor and 5G-LENA dependency, in
+                NS3, Ubuntu.</li>
             </ul>
           </div>
         </div>
@@ -117,14 +149,18 @@
             <div class="timeline-logo">
               <img src="/assets/images/logos/stevens-logo.png" alt="Stevens Institute of Technology">
             </div>
-            <p class="org-name">Stevens Institute of Technology <br><span class="timeline-date">Sep. 2023 – Present</span></p>
+            <p class="org-name">Stevens Institute of Technology <br><span class="timeline-date">Sep. 2023 –
+                Present</span></p>
           </div>
           <div class="timeline-org-card">
             <h3>Master of Science (M.S.) in Data Science</h3>
             <ul>
               <li>Provost Scholarship: Received a Merit-based scholarship of 8,000 USD.</li>
               <li>Math Olympiad Volunteer:<br>
-              Helped students solve their doubts, and assisted in the grading process. Supervised the examination for 5th Graders to ensure compliance with the rules. Assisted in organizing and coordinating logistical aspects of the event. Managed the registration and departure processes for participants including check-ins and check-outs.</li>
+                Helped students solve their doubts, and assisted in the grading process. Supervised the examination for
+                5th Graders to ensure compliance with the rules. Assisted in organizing and coordinating logistical
+                aspects of the event. Managed the registration and departure processes for participants including
+                check-ins and check-outs.</li>
               <li>CGPA: 3.9/4.0</li>
             </ul>
           </div>
@@ -142,28 +178,39 @@
             <ul>
               <li>MYSY Scholarship: Received a Merit-based scholarship of 50,000 INR per sem (2X).</li>
               <li>High-on Life NGO Volunteer:</br>
-                Done a thorough analysis based on the past data, collected through the survey, of the organization. Made posters and adverting products to spread the idea of a 'Drug-free India' among the younger generation. Implemented several decisions for the betterment of the organization based on the processed data. Data Visualization and Presentation were a part of my job, during the internship</li>
+                Done a thorough analysis based on the past data, collected through the survey, of the organization. Made
+                posters and adverting products to spread the idea of a 'Drug-free India' among the younger generation.
+                Implemented several decisions for the betterment of the organization based on the processed data. Data
+                Visualization and Presentation were a part of my job, during the internship</li>
             </ul>
           </div>
         </div>
       </div>
     </div>
-    
+
     <div class="about-me-section">
-      <h2 class="about-me-title">About Me</h2>
-      <div class="about-me-content">
-        <p>
-          Hi, I'm Nihar Patel, a passionate Data Scientist with a strong background in  Machine Learning, Data Engineering, Software Development, and Research. I specialize in building intelligent systems to solve real-world problems using cutting-edge technologies like Python, TensorFlow, PyTorch, C#, and Unity.
-          <br>
-          <br>
-          I hold a Master's degree in Data Science from Stevens Institute of Technology and a Bachelor's degree in Computer Science from Ahmedabad University along with a minor in Business analytics. My work experience includes roles as a Data Science Teaching Assistant, Software Developer Intern, and Undergraduate Research Intern.
-          <br>
-          <br>
-          In my free time, I enjoy contributing to open-source projects, writing technical blogs, and exploring and learning about new advancements in AI and machine learning.
-          <br>
-          <br>
-          Appart from that, I'm a big fan of THISSS!!! 👇
-        </p>
+      <div class="paper">
+        <h2 class="about-me-title">About Me</h2>
+        <div class="about-me-content">
+          <p>
+            Hi, I'm Nihar Patel, a passionate Data Scientist with a strong background in Machine Learning, Data
+            Engineering, Software Development, and Research. I specialize in building intelligent systems to solve
+            real-world problems using cutting-edge technologies like Python, TensorFlow, PyTorch, C#, and Unity.
+            <br>
+            <br>
+            I hold a Master's degree in Data Science from Stevens Institute of Technology and a Bachelor's degree in
+            Computer Science from Ahmedabad University along with a minor in Business analytics. My work experience
+            includes roles as a Data Science Teaching Assistant, Software Developer Intern, and Undergraduate Research
+            Intern.
+            <br>
+            <br>
+            In my free time, I enjoy contributing to open-source projects, writing technical blogs, and exploring and
+            learning about new advancements in AI and machine learning.
+            <br>
+            <br>
+            Appart from that, I'm a big fan of THISSS!!! 👇
+          </p>
+        </div>
       </div>
     </div>
 
