Fixed page padding using JS

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             learning about new advancements in AI and machine learning.
             <br>
             <br>
-            Appart from that, I'm a big fan of THISSS!!! 👇
+            Apart from that, I'm a big fan of THISSS!!! 👇
           </p>
         </div>
       </div>
