Trying to fix player transition, still not completed\nSome changes in head data for title, and added footer

--- a/project/index.html
+++ b/project/index.html
@@ -12,13 +12,36 @@
   <meta name="description" content="Personal Website">
   <meta name="keywords" content="Nihar Patel,Data Scientist,ML,AI">
   <meta name="author" content="Nihar Patel">
-  <meta property="og:title" content="Nihar Patel" />
-  <meta property="og:description" content="Hi I am Nihar Patel, a Data Science professional, with a MS in Data Science from Stevens." />
+  <meta property="og:title" content="Nihar Patel's Project page | Data Scientist & AI/ML Specialist" />
+  <meta name="description" content="Explore the data science and AI/ML portfolio of Nihar Patel. Discover innovative projects, read insightful blog posts, and connect with a data professional.">
   <meta property="og:image" content="https://nihar371.github.io/assets/images/profile/website-preview-thumbnail.png" />
+  <meta property="og:image:alt" content="A professional banner image for Nihar Patel's website" />
   <meta property="og:url" content="https://nihar371.github.io/" />
+  <link rel="canonical" href="https://nihar371.github.io/" />
 
-  <title>Nihar Patel 🤖</title>
-  <link rel="icon" type="image/np-icon" href="/assets/images/favicon/favicon-32x32.png">
+
+  <title>Project 🧪 | Nihar Patel</title>
+  <link rel="icon" type="image/x-icon" href="/assets/images/favicon/favicon-32x32.png">
+
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Nihar Patel",
+      "url": "https://nihar371.github.io/",
+      "image": "https://nihar371.github.io/assets/images/profile/website-preview-thumbnail.png",
+      "jobTitle": "Data Scientist",
+      "alumniOf": {
+        "@type": "CollegeOrUniversity",
+        "name": "Stevens Institute of Technology"
+      },
+      "knowsAbout": ["Data Science", "Machine Learning", "Artificial Intelligence", "Python", "Data Visualization", "Deep Learning"],
+      "sameAs": [
+        "https://www.linkedin.com/in/niharpatel371/",
+        "https://github.com/nihar371"
+      ]
+    }
+    </script>
 </head>
 
 <body>  
