--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
               <img src="/assets/images/logos/stevens-logo.png" alt="Stevens Institute of Technology">
             </div>
             <p class="org-name">Stevens Institute of Technology <br><span class="timeline-date">Sep. 2023 –
-                Present</span></p>
+                May 2025</span></p>
           </div>
           <div class="timeline-org-card">
             <h3>Master of Science (M.S.) in Data Science</h3>
@@ -235,4 +235,5 @@
     
   </main>
 </body>
+
 </html>
