--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="/styles/about_page_styles.css">
   <link rel="stylesheet" href="/styles/basic_page_styles.css">
+  <link rel="stylesheet" href="/styles/landing_page_styles.css">
   <script src="/scripts/basic_page_scripts.js" defer></script>
-  <script src="/scripts/about_page_scripts.js" defer></script>
+  <script src="/scripts/landing_page_scripts.js" defer></script>
 
   <meta name="view-transition" content="same-origin" />
   <meta name="description" content="Personal Website">
@@ -46,194 +46,19 @@
 </head>
 
 <body>
-  <main>
-
-    <!-- Timeline Container -->
-    <div class="timeline-container">
-      <!-- Work Experience Timeline -->
-      <div class="timeline">
-        <h2 class="timeline-title">Work Experience</h2>
-        <!-- Timeline Item 1 -->
-        <div class="timeline-item">
-          <div class="timeline-org">
-            <div class="timeline-logo">
-              <img src="/assets/images/logos/adp-logo.png" alt="ADP">
-            </div>
-            <p class="org-name">ADP <br><span class="timeline-date">May. 2025 – Jul. 2025</span></p>
-          </div>
-          <div class="timeline-org-card">
-            <h3>Data Developer Jr.</h3>
-            <ul>
-              <li>Designed and deployed ETL pipelines using Databricks and PySpark for scheduled data streams,
-                implementing Unity Catalog for robust data governance and lineage tracking.</li>
-              <li>Leveraged AWS services like S3, Redshift, Lambda, and Glue for data storage, warehousing, automation,
-                and refresh workflows.</li>
-              <li>Reported valuable insights through Python & SQL reports, and developed Power BI dashboard using DAX,
-                for higher-ups. </li>
-              <li>Documented and contributed to internal knowledge sharing through Docker, BitBucket, Git, Jira, and
-                Confluence. </li>
-            </ul>
-          </div>
-        </div>
-        <!-- Timeline Item 2 -->
-        <div class="timeline-item">
-          <div class="timeline-org">
-            <div class="timeline-logo">
-              <img src="/assets/images/logos/stevens-logo.png" alt="Stevens Institute of Technology">
-            </div>
-            <p class="org-name">Stevens Institute of Technology <br><span class="timeline-date">Jul. 2024 –
-                Present</span></p>
-          </div>
-          <div class="timeline-org-card">
-            <h3>Data Science Teaching Assistant</h3>
-            <ul>
-              <li>Assisted Prof. Pedro Vilanova-Guerra and Prof. Paul Schwartz in MA576: Optimization for Data Science,
-                and MA540: Probability Theory respectively.</li>
-              <li>Assisted Prof. Tewodros Zewde in conducting the AI Workshop for the Summer Pre-College Program 2024.
-              </li>
-              <li>Taught how to code in Python from scratch to building and training a Multi-Layer Perceptron, including
-                working with ML libraries such as Numpy, Pandas, Matplotlib, and Scikit-Learn.</li>
-              <li>Covered and discussed advanced topics during the lectures, such as Responsible AI, Supervised and
-                Unsupervised Learning, Neural Networks, CNNs, and Generative AI, to illustrate their relevance and
-                applications in daily life.</li>
-            </ul>
-          </div>
-        </div>
-        <!-- Timeline Item 3 -->
-        <div class="timeline-item">
-          <div class="timeline-org">
-            <div class="timeline-logo">
-              <img src="/assets/images/logos/effe-studio-logo.png" alt="EFFE Studio">
-            </div>
-            <p class="org-name">EFFE Studio Pvt. Ltd. <br><span class="timeline-date">Feb. 2023 – Jun. 2023</span></p>
-          </div>
-          <div class="timeline-org-card">
-            <h3>Software Developer Intern</h3>
-            <ul>
-              <li>Led a team of five, developers and 3D artists, major working areas include scripting game mechanics
-                and animating eventsin Unity.</li>
-              <li>Integrated database and database-authentication systems, with the help of Google Cloud Auth 2.0 and
-                Firebase, handling over 10,000 users, with a fully functional graphical user interface (GUI) in Unity,
-                through Google console API calls.</li>
-              <li>Implemented sophisticated methods like Dynamic NavMesh Pathfinding, Machine Learning Agents, and
-                Animation Rigging.</li>
-              <li>Used Universal Render Pipeline (URP) to double the graphic enhancement, achieved a performance boost
-                of over 150% through Occlusion Culling in Unity, and created more than 30 assets and animated characters
-                in Blender, and Mixamo.</li>
-            </ul>
-          </div>
-        </div>
-        <!-- Timeline Item 4 -->
-        <div class="timeline-item">
-          <div class="timeline-org">
-            <div class="timeline-logo">
-              <img src="/assets/images/logos/micxn-lab-logo.png" alt="MICxN Laboratory">
-            </div>
-            <p class="org-name">MICxN Laboratory <br><span class="timeline-date">May 2021 – Jul. 2021</span></p>
-          </div>
-          <div class="timeline-org-card">
-            <h3>Undergraduate Research Intern</h3>
-            <ul>
-              <li>Addressed congestion control and pedestrian safety within Intelligent Transportation Systems (ITS).
-              </li>
-              <li>Employed unsupervised clustering algorithms like K-means, K-nearest neighbors (KNN), and spatial
-                clustering for segmentation, enabling customized approaches for distinct clusters.</li>
-              <li>Utilized Recurrent Neural Networks (RNN) and Long Short-Term Memory (LSTM) networks to tackle traffic
-                congestion at intersections and crossroads.</li>
-              <li>Deployed advanced machine learning techniques, including Spatio-Temporal Graph Convolutional Networks
-                (STGCNN), to mitigate traffic congestion leveraging 5G networks.</li>
-              <li>Studied and Analyzed the impacts on mobility due to the 5G network, under the sub-domain of
-                Intelligent Transport System (ITS).</li>
-              <li>Simulation models were performed with the help of traffic simulators like SUMO, PTV-VISSIM, and
-                networking tool NS-3.</li>
-              <li>Analyzed clustering algorithms on networking protocols such as AODV, OLSR, DSDV, and DSR, for the
-                Freeway mobility model.</li>
-              <li>Advance Analysis of every node was performed and monitored via Flow-monitor and 5G-LENA dependency, in
-                NS3, Ubuntu.</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
-      <!-- Education Timeline -->
-      <div class="timeline">
-        <h2 class="timeline-title">Education</h2>
-        <!-- Timeline Item 1 -->
-        <div class="timeline-item">
-          <div class="timeline-org">
-            <div class="timeline-logo">
-              <img src="/assets/images/logos/stevens-logo.png" alt="Stevens Institute of Technology">
-            </div>
-            <p class="org-name">Stevens Institute of Technology <br><span class="timeline-date">Sep. 2023 –
-                May 2025</span></p>
-          </div>
-          <div class="timeline-org-card">
-            <h3>Master of Science (M.S.) in Data Science</h3>
-            <ul>
-              <li>Provost Scholarship: Received a Merit-based scholarship of 8,000 USD.</li>
-              <li>Math Olympiad Volunteer:<br>
-                Helped students solve their doubts, and assisted in the grading process. Supervised the examination for
-                5th Graders to ensure compliance with the rules. Assisted in organizing and coordinating logistical
-                aspects of the event. Managed the registration and departure processes for participants including
-                check-ins and check-outs.</li>
-              <li>CGPA: 3.9/4.0</li>
-            </ul>
-          </div>
-        </div>
-        <!-- Timeline Item 2 -->
-        <div class="timeline-item">
-          <div class="timeline-org">
-            <div class="timeline-logo">
-              <img src="/assets/images/logos/ahmedabad-uni-logo.png" alt="Ahmedabad University">
-            </div>
-            <p class="org-name">Ahmedabad University <br><span class="timeline-date">Aug. 2019 – May 2023</span></p>
-          </div>
-          <div class="timeline-org-card">
-            <h3>Bachelor of Science (B.S.) in Computer Science, Minors in Business Analytics</h3>
-            <ul>
-              <li>MYSY Scholarship: Received a Merit-based scholarship of 50,000 INR per sem (2X).</li>
-              <li>High-on Life NGO Volunteer:</br>
-                Done a thorough analysis based on the past data, collected through the survey, of the organization. Made
-                posters and adverting products to spread the idea of a 'Drug-free India' among the younger generation.
-                Implemented several decisions for the betterment of the organization based on the processed data. Data
-                Visualization and Presentation were a part of my job, during the internship</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="about-me-section">
-      <div class="paper">
-        <h2 class="about-me-title">About Me</h2>
-        <div class="about-me-content">
-          <p>
-            Hi, I'm Nihar Patel, a passionate Data Scientist with a strong background in Machine Learning, Data
-            Engineering, Software Development, and Research. I specialize in building intelligent systems to solve
-            real-world problems using cutting-edge technologies like Python, TensorFlow, PyTorch, C#, and Unity.
-            <br>
-            <br>
-            I hold a Master's degree in Data Science from Stevens Institute of Technology and a Bachelor's degree in
-            Computer Science from Ahmedabad University along with a minor in Business analytics. My work experience
-            includes roles as a Data Science Teaching Assistant, Software Developer Intern, and Undergraduate Research
-            Intern.
-            <br>
-            <br>
-            In my free time, I enjoy contributing to open-source projects, writing technical blogs, and exploring and
-            learning about new advancements in AI and machine learning.
-            <br>
-            <br>
-            Apart from that, I'm a big fan of THISSS!!! 👇
-          </p>
-        </div>
-      </div>
-    </div>
-
-    <div class="formula1">
-      <img src="/assets/images/icons/formula1_wallpaper.jpg" alt="formula 1 image">
-    </div>
-    
-  </main>
+  <main></main>
+  <!-- Adding background images -->
+  <div class="background-image-container map-container">
+    <div class="map-gradient"></div>
+    <img src="/assets/images/textures/map.jpg"></img>
+  </div>
+  <div class="background-image-container car-container">
+    <div class="car-gradient"></div>
+    <img src="/assets/images/textures/car_blueprint.png"></img>
+  </div>
+  <div class="background-image-container max-container">
+    <div class="max-gradient"></div>
+    <img src="/assets/images/textures/max-eyes.webp"></img>
+  </div>
 </body>
-
 </html>
