New about things

--- a/about/index.html
+++ b/about/index.html
@@ -43,17 +43,82 @@
       ]
     }
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns"></script>
+    <script src="https://cdn.jsdelivr.net/npm/hammerjs@2.0.8"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom@2.0.1"></script>
 </head>
 
 <body>
   <main>
+    <div class="about-me-section">
+      <div class="paper">
+        <h2 class="about-me-title">About Me</h2>
+        <div class="about-me-content">
+          <p>
+            Hi, I'm Nihar Patel, a passionate Data Scientist with a strong background in AI/ML, Data Analysis and Engineering.
+            This website will be my warehouse of my thoughts and knowledge. I love to work on real-world problems which are impactful and changes lives.
+            <br>
+            <br>
+            In my free time (and if there isn't them I make some room for it - no compromise in this), I make myself busy with motersports.
+          </p>
+        </div>
+      </div>
+    </div>
 
-    <!-- Timeline Container -->
-    <div class="timeline-container">
-      <!-- Work Experience Timeline -->
+    <div class="container">
+        <div class="chart-container">
+            <div class="canvas-wrapper">
+                <canvas id="ganttChart"></canvas>
+            </div>
+        </div>
+    </div>
+
+    <div class="formula1">
+      <img src="/assets/images/icons/formula1_wallpaper.jpg" alt="formula 1 image">
+    </div>
+    
+  </main>
+</body>
+
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- <div class="timeline-container">
+
       <div class="timeline">
         <h2 class="timeline-title">Work Experience</h2>
-        <!-- Timeline Item 1 -->
+
         <div class="timeline-item">
           <div class="timeline-org">
             <div class="timeline-logo">
@@ -75,7 +140,7 @@
             </ul>
           </div>
         </div>
-        <!-- Timeline Item 2 -->
+
         <div class="timeline-item">
           <div class="timeline-org">
             <div class="timeline-logo">
@@ -98,7 +163,7 @@
             </ul>
           </div>
         </div>
-        <!-- Timeline Item 3 -->
+
         <div class="timeline-item">
           <div class="timeline-org">
             <div class="timeline-logo">
@@ -122,7 +187,7 @@
             </ul>
           </div>
         </div>
-        <!-- Timeline Item 4 -->
+
         <div class="timeline-item">
           <div class="timeline-org">
             <div class="timeline-logo">
@@ -154,10 +219,9 @@
         </div>
       </div>
 
-      <!-- Education Timeline -->
       <div class="timeline">
         <h2 class="timeline-title">Education</h2>
-        <!-- Timeline Item 1 -->
+
         <div class="timeline-item">
           <div class="timeline-org">
             <div class="timeline-logo">
@@ -179,7 +243,7 @@
             </ul>
           </div>
         </div>
-        <!-- Timeline Item 2 -->
+
         <div class="timeline-item">
           <div class="timeline-org">
             <div class="timeline-logo">
@@ -200,39 +264,4 @@
           </div>
         </div>
       </div>
-    </div>
-
-    <div class="about-me-section">
-      <div class="paper">
-        <h2 class="about-me-title">About Me</h2>
-        <div class="about-me-content">
-          <p>
-            Hi, I'm Nihar Patel, a passionate Data Scientist with a strong background in Machine Learning, Data
-            Engineering, Software Development, and Research. I specialize in building intelligent systems to solve
-            real-world problems using cutting-edge technologies like Python, TensorFlow, PyTorch, C#, and Unity.
-            <br>
-            <br>
-            I hold a Master's degree in Data Science from Stevens Institute of Technology and a Bachelor's degree in
-            Computer Science from Ahmedabad University along with a minor in Business analytics. My work experience
-            includes roles as a Data Science Teaching Assistant, Software Developer Intern, and Undergraduate Research
-            Intern.
-            <br>
-            <br>
-            In my free time, I enjoy contributing to open-source projects, writing technical blogs, and exploring and
-            learning about new advancements in AI and machine learning.
-            <br>
-            <br>
-            Apart from that, I'm a big fan of THISSS!!! 👇
-          </p>
-        </div>
-      </div>
-    </div>
-
-    <div class="formula1">
-      <img src="/assets/images/icons/formula1_wallpaper.jpg" alt="formula 1 image">
-    </div>
-    
-  </main>
-</body>
-
-</html>
+    </div> -->
